Fix issue occured due to z-index

--- a/assets/styles/builder.scss
+++ b/assets/styles/builder.scss
@@ -27,7 +27,7 @@ label[for="axisbuilder-editor-hide"] {
 /* Toggle Button */
 #axisbuilder-button {
 	top: 10px;
-	z-index: 9999;
+	z-index: 1001;
 	position: relative;
 
 	&:active, &:focus {
